+--------------------+
| Xfce Notify Daemon |
+--------------------+

Version 0.2.3git:

  Features:
    * Add a category to the settings dialog for Xfce4 Settings Manager.
    * Add widget names to summary ("summary") and body ("body") widgets
      to allow easier theming. Remove the redundant / buggy summary-bold
      style property (bug #8431).
      Themes will have to be updated accordingly.

  Bugs fixed:
    * Fix notifications not disappearing after clicking an action button.
    * Handle timeout correctly when smaller than fading time (bug #8580).
    * Parse body with g_markup_escape_text which allows us to handle
      span attributes missused by some clients and to parse strings with
      "unusual" caracters such as & (bug #7773, #8187).
    * Respect border-width when drawing the notification (bug #9475).
    * Do not kill notification daemon to apply new theme. Instead, handle
      style updates of existing notifications.

Version 0.2.2 (06 August 2011):

    * New cleaner settings dialog with preview on theme change.
    * Only initialize the close timeout when all notifications are closed
      (bug #7467).
    * Fix race with window becoming invalid (bug #7643).
    * Fix typo in invalid markup escaping (bug #7773).
    * Fix PATH_MAX beeing undefined on HURD (bug #7528).
    * Rename dbus service file to avoid conflicts (bug #7335).
    * Allow installation of the helpers in a custom location.
    * Updated translations: Arabic, Basque, Brazilian, Castillan,
      Chinese, Danish, Flemish, Galician, German, Indonesian, Italian,
      Japanese, Romanian, Portuguese, Russian, Slovak, Spanish,
      Swedish and Ukrainian.

Version 0.2.1 (02 Feb 2011):

    * Fix loading of custom icons (bug #6895).
    * Fix crash introduced in 0.2.0 (bug #6929).
    * Fade to transparent when screen is composited, remove the setting.
    * Updated translations: Romanian, Turkish, Polish, Galician, Ukrainian,